# hantoo

./: .env.example  .gitignore  KIS_API_CHECKLIST.md  PLAN.md  REVERSE-PROXY.md  docker-compose.yml  worklog.md
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  ai.py  alert.py  kis_account.py  portfolio.py  settings.py  trade.py  user.py  watchlist.py
backend/app/routers/: accounts.py  auth.py  corporate.py  finance.py  market.py  orders.py  overseas.py  portfolio.py  ranking.py  setup.py  watchlists.py
backend/app/schemas/: account.py  analysis.py  auth.py  market.py  order.py  overseas.py  portfolio.py  watchlist.py
backend/app/services/: cache.py  corporate_service.py  etf_service.py  finance_service.py  kis_client.py  kis_token_service.py  order_service.py  overseas_master.py  overseas_order_service.py  overseas_quote_service.py  portfolio_service.py  quote_service.py  ranking_service.py  rate_limiter.py  redis_client.py  settings_service.py  stock_list.py
backend/app/utils/: encryption.py  security.py
caddy/: Caddyfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/hooks/: use-analysis.ts  use-market.ts  use-orders.ts  use-overseas-market.ts  use-overseas-orders.ts  use-portfolio.ts  use-ranking.ts  use-watchlist.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/stores/: auth-store.ts  trading-store.ts
frontend/src/types/: market.ts
nginx/: nginx.conf
(+30 files in other folders)
